--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>MEMORIES</strong> <span>WITH A WATERMARK</span></a>
 						<nav>
-							<a href="#menu">Menu</a>
+							<a href="#menu">EXPLORE</a>
 						</nav>
 					</header>
 
