--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Photos</a></li>
+							<li><a href="multiverse.html">Photos</a></li>
 							<li><a href="generic.html">Movies</a></li>
 							<li><a href="elements.html">Music</a></li>
 						</ul>
