--- a/multiverse.html
+++ b/multiverse.html
@@ -22,7 +22,7 @@
 						<h1><a href="index.html"><strong>MEMORIES</strong> WITH A WATERMARK</a></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">BACK</a></li>
+								<li><a href="index.html">BACK</a></li>
 							</ul>
 						</nav>
 					</header>
