--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
+										<h3><a href="landing.html" class="link">Travel</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -83,7 +83,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
+										<h3><a href="landing.html" class="link">Movies</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -92,7 +92,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<h3><a href="landing.html" class="link">Music</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
@@ -101,7 +101,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
+										<h3><a href="landing.html" class="link">Blog</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
