--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
+										<h3><a href="landing.html" class="link">Tech</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
