--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<p> A curated space for moments that matter.<br />
 								By JK.</p>
 								<ul class="actions">
-									<a href="#one" class="button next scrolly" style="padding: 0.5em 1em; font-size: 0.85em;">Get started</a>
+									<a href="#one" class="button next scrolly" style="padding: 0.5em 1em; font-size: 0.85em;">Explore</a>
 								</ul>
 							</div>
 						</div>
