--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Captured</a></h3>
+										<h3><a href="multiverse.html" class="link">Captured</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
