--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								</article>
 							</section>
 
-						
+					 <li><a href="#" class="button primary fit">Go to Top</a></li> 	
 
 				<!-- Contact -->
 					<section id="contact">
