--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							</section>
 
 					 <li><a href="#" class="button primary fit">Go to Top</a></li> 	
-
+                                         <li><a href="#one" class="button primary fit">Go to Top</a></li>
 
 				<!-- Footer -->
 					<footer id="footer">
